# robot_chess

./: .gitignore  README.md  docker-compose-tests.yml  docker-compose.yml  run.sh  tests.sh
perception/: CMakeLists.txt  Dockerfile  Dockerfile-tests
perception/src/: find_board.cpp  find_board.h  main.cpp  tests.cpp
